--- a/css/styles.css
+++ b/css/styles.css
@@ -189,4 +189,40 @@
 
 .skills-box i{
     font-size: 45px;
+    margin-right: 10px;
+}
+
+
+/*Mobile*/
+
+@media(max-width: 450px){
+    #container{
+        flex-direction: column;
+    }
+
+    #bio-container{
+        min-height: auto;
+        border-right: none;
+        border-bottom: 5px solid var(--bio-border-color);
+    }
+
+    #bio-container h2{
+        display: none;
+    }
+
+    #bio-conteiner p{
+        max-width: 60%;
+        margin: 10px auto;
+    }
+
+    .skills-box{
+        flex: 1 1 100%;
+        max-width: 100%;
+        margin-bottom: 40px;
+        text-align: left;
+    }
+
+    .skills-box i{
+        font-size: 60px;
+    }
 }
